--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,10 @@
 .navigation {
   background-color: #333;
   text-align: center;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
 }
 
 .navigation li {
@@ -21,4 +25,49 @@
 
 .navigation a:hover {
   color: #ff0000;
+}
+
+.blog-post {
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 30px;
+  text-align: center;
+  background-color: #3399ff;
+  color: #fff;
+  padding: 20px;
+  border-color: #404040;
+  border-width: 5px;
+  border-style: solid;
+  border-radius: 20px;
+}
+
+.blog-post h2 {
+  transition: 1s;
+  font-size: 1em;
+}
+
+.blog-post h2:hover {
+  transition: 1s;
+  font-size: 3em;
+}
+
+.resize {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+}
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
