--- a/maakaasu_style.css
+++ b/maakaasu_style.css
@@ -1,24 +1,8 @@
-.container {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-}
 
-.sky {
-    height: 100%;
-    width: 100%;
-    background-image: linear-gradient(rgba(26,26,26,0.7),rgba(26,26,26,0.7)), url("https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTmiIpKKvg4elri3-pIJkS36OP2lJ8wWukYwZCXztNwNcCHHuqP");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
 
 .navigation {
-  background-color: #333;
   text-align: center;
-  position: fixed;
+/*  position: fixed; */
   top: 0px;
   left: 0px;
   right: 0px;
@@ -28,7 +12,7 @@
   padding-top: 15px;
   padding-bottom: 10px;
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 30px;
 }
 
 .navigation ul {
@@ -41,8 +25,16 @@
 }
 
 .navigation a:hover {
-  color: #ff0000;
+  color: #009999;
 }
+
+.head {
+  color: #ffffff;
+  text-align: center;
+  font-size: 250%;
+  margin-top: 100px;
+}
+
 
 .blog-post {
   width: 70%;
@@ -50,17 +42,9 @@
   margin-top: 30px;
   text-align: center;
   padding: 20px;
+  background-color: rgba(255,255,255,0.3);
 }
 
-.blog-post h2 {
-  transition: 1s;
-  font-size: 1em;
-}
-
-.blog-post h2:hover {
-  transition: 1s;
-  font-size: 3em;
-}
 
 .resize {
   width: 100%;
