--- a/maakaasu_style.css
+++ b/maakaasu_style.css
@@ -2,10 +2,11 @@
 
 .navigation {
   text-align: center;
-/*  position: fixed; */
+  position: fixed;
   top: 0px;
   left: 0px;
   right: 0px;
+  background-color: rgba(88,88,88,0.20);
 }
 
 .navigation li {
@@ -20,6 +21,7 @@
 }
 
 .navigation a {
+  font-family: 'Roboto Condensed', sans-serif;
   text-decoration: none;
   color: #fff;
 }
@@ -28,7 +30,14 @@
   color: #009999;
 }
 
+.active {
+  background-color: rgba(161, 161, 161, 0.20);
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
 .head {
+  font-family: 'Roboto Condensed', sans-serif;
   color: #ffffff;
   text-align: center;
   font-size: 250%;
@@ -43,6 +52,7 @@
   text-align: center;
   padding: 20px;
   background-color: rgba(255,255,255,0.3);
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 
@@ -65,6 +75,14 @@
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.foot {
+  height: 25px;
+  background-color: rgba(88,88,88,0.3);
+  color: #ffffff;
+  text-align: center;
+
 }
 
 @media screen and (max-width: 500px) {
