--- a/maakaasu_style.css
+++ b/maakaasu_style.css
@@ -46,7 +46,7 @@
 
 
 .blog-post {
-  width: 70%;
+  width: 100%;
   margin: 0 auto;
   margin-top: 30px;
   text-align: center;
@@ -85,8 +85,8 @@
 
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (min-width: 500px) {
   .blog-post {
-    width: 100%;
+    width: 70%;
   }
 }
