--- a/maakaasu_style.css
+++ b/maakaasu_style.css
@@ -88,8 +88,7 @@ body {
   text-align: center;
 
 }
-
-@media screen and (max-width: 500px) {
+/*@media screen and (max-width: 500px) {
   .navigation li {
     display: inline-block;
   }
@@ -99,7 +98,7 @@ body {
   .blog-post {
     width: 100%;
   }
-}
+}*/
 
 @@media screen and (max-width: 350px) {
   .navigation li {
@@ -109,6 +108,9 @@ body {
     height: 80px;
   }
   .blog-post {
+    width: %;
+  }
+  foot {
     width: 100%;
   }
 }
