--- a/maakaasu_style.css
+++ b/maakaasu_style.css
@@ -108,9 +108,9 @@ body {
     height: 80px;
   }
   .blog-post {
-    width: %;
+    width: 100%;
   }
-  foot {
+  .foot {
     width: 100%;
   }
 }
