--- a/maakaasu_style.css
+++ b/maakaasu_style.css
@@ -58,6 +58,12 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+.news {
+  text-align: center;
+  background-color: rgba(255,255,255,0.3);
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
 
 .resize {
   width: 100%;
