--- a/maakaasu_style.css
+++ b/maakaasu_style.css
@@ -47,9 +47,27 @@ body {
   margin-top: 100px;
 }
 
+.game-head {
+  font-family: 'Roboto Condensed', sans-serif;
+  color: #ffffff;
+  text-align: center;
+  font-size: 150%;
+  margin-top: 50px;
+}
+
 
 .blog-post {
   width: 70%;
+  margin: 0 auto;
+  margin-top: 30px;
+  text-align: center;
+  padding: 20px;
+  background-color: rgba(255,255,255,0.3);
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+.game-post {
+  width: 60%;
   margin: 0 auto;
   margin-top: 30px;
   text-align: center;
