--- a/maakaasu_style.css
+++ b/maakaasu_style.css
@@ -88,7 +88,7 @@ body {
 
 .news {
   width: 70%;
-  min-height: 300px;
+  min-height: 205px;
   margin: 0 auto;
   margin-top: 30px;
   text-align: center;
@@ -126,6 +126,7 @@ body {
 }
 
 .foot {
+  margin-top: 20px;
   font-family: 'Roboto Condensed', sans-serif;
   height: 100px;
   background-color: rgba(88,88,88,0.3);
